# algoritmi-strojnog-vida

feature_matching/Exercies-20250624/: aruco_perspective.txt  code_feature_matching.txt  code_feature_matching_ORB.txt
kolokvij_1/: CMakeLists.txt
kolokvij_1/src/: summary.cpp  zadatak_2 copy.cpp
kolokvij_2/OpenCV3/OpenCV3/: CMakeLists.txt
kolokvij_2/OpenCV3/OpenCV3/src/: test.cpp  vj3.cpp  zadatak1.cpp  zadatak3.cpp
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/: CMakeLists.txt
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/data/primjer/: cloud_1_ptf.pcd  cloud_1_v.pcd
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/data/rezultati/: cloud_1_sop.pcd  cloud_1_v.pcd  generated_cloud.pcd  generated_cloud_1_ptf.pcd
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/data/scene_01/: transform_01.txt  transform_02.txt  transform_03.txt  transform_04.txt  transform_05.txt
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/data/scene_02/: transform_01.txt  transform_02.txt  transform_03.txt  transform_04.txt  transform_05.txt
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/data/scene_03/: transform_01.txt  transform_02.txt  transform_03.txt  transform_04.txt  transform_05.txt
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/data/scene_04/: transform_01.txt  transform_02.txt  transform_03.txt  transform_04.txt  transform_05.txt
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/data/scene_05/: transform_01.txt  transform_02.txt  transform_03.txt  transform_04.txt  transform_05.txt
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/data/scene_06/: transform_01.txt  transform_02.txt  transform_03.txt  transform_04.txt  transform_05.txt
kolokvij_2/PCL/PCL/01_3D vision and point cloud data/pcl_ws/src/: p_01_generiranje_PC.cpp  p_02_pointer.cpp  p_03_dimenzije_PC.cpp  p_04_pass_through_primjer.cpp  p_05_statistical_outlier_primjer.cpp  p_06_vokselizacija_pc.cpp  z_01_citanje_pc.cpp
kolokvij_2/PCL/PCL/02_Point cloud registration/Vjezbe/: CMakeLists.txt
kolokvij_2/PCL/PCL/02_Point cloud registration/Vjezbe/data/: 01zekan_glava.pcd  01zekan_glava_downsampled_nakoso.pcd  armadillo_downsampled.pcd  armadillo_downsampled_gauss_20.pcd  axial_downsampled_100.pcd  axial_downsampled_100_downsampled.pcd  axial_downsampled_100_full_transformation_1.pcd  axial_downsampled_100_partial_60_full_transformation.pcd  axial_downsampled_100_partial_60_full_transformation_downsampled.pcd  bounding_box  bun000.pcd  bunny_downsampled.pcd  bunny_downsampled_gauss_1_full_transformation.pcd  cloud_18042025_112549_unorganized.pcd  cloud_18042025_113013_unorganized.pcd  cloud_18042025_113451_unorganized.pcd  downsampled_zekan.pcd  downsampled_zekan_4209.pcd  downsampled_zekan_4209_nahero.pcd
kolokvij_2/PCL/PCL/02_Point cloud registration/Vjezbe/src/: bounding_box.cpp  cutting_pcd.cpp  downsampling_voxels.cpp  kfpcs_registration.cpp  pcd_transformation.cpp
kolokvij_2/PCL/PCL/02_Point cloud registration/Vjezbe/tmp/: kfpcs_data_armadillo.txt  kfpcs_data_zekan.txt
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2/data/: 04_2_cloud_2.pcd  05_2_cloud_5.pcd  11_2_cloud_2.pcd  11_2_cloud_5.pcd  12_2_cloud_poravnati.pcd  12_2_cloud_spojeni.pcd
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2/src/: p_04_1_pass_through_primjer.cpp  p_04_pass_through_primjer.cpp  p_05_statistical_outlier_primjer.cpp  p_08_ransac.cpp  p_09_ciscenje.cpp  p_10_klasterizacija.cpp  p_11_transformacija_PC.cpp  p_12_ICP.cpp
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_1/: CMakeLists.txt
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_1/asv_dataset/scene_01/: cloud_1.txt  cloud_2.txt  cloud_3.txt
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_1/asv_dataset/scene_02/: cloud_4.txt
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_1/asv_dataset/scene_03/: cloud_4.txt
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_1/data/: cloud_2.txt
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_1/results/: 04_1_cloud_2.pcd  04_cloud_2.pcd  05_cloud_2.pcd
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_1/src/: p_04_1_pass_through_primjer.cpp  p_04_2_pass_through_primjer.cpp  p_04_pass_through_primjer.cpp  p_05_statistical_outlier_primjer.cpp  p_07_ransac_plane.cpp  p_08_ransac.cpp  p_09_ciscenje.cpp
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_2/: CMakeLists.txt
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_2/results/: 04_1_cloud_5.pcd  04_2_cloud_5.pcd  05_cloud_5.pcd  08_cloud_5.pcd
kolokvij_2/PCL/PCL/03_Case study - PCL- zad_2_2/src/: p_04_0_pass_through_primjer.cpp  p_04_1_pass_through_primjer.cpp  p_04_2_pass_through_primjer.cpp  p_05_1_statistical_outlier_primjer.cpp  p_05_2_statistical_outlier_primjer.cpp  p_07_ransac_plane.cpp  p_08_ransac.cpp  p_12_ICP.cpp
kolokvij_2/PCL/PCL/03_Case study - PCL/results/: 04_cloud_4.pcd  (+11 more)
student_assignment_1/: CMakeLists.txt
student_assignment_1/src/: main.cpp
student_assignment_3/: CMakeLists.txt
student_assignment_3/src/: main.cpp  main2.cpp
student_assignment_3_2/: CMakeLists.txt
student_assignment_3_2/src/: main.cpp  main2.cpp
student_assignment_4/: CMakeLists.txt
student_assignment_4/src/: main.cpp
student_assignment_5/: CMakeLists.txt
student_assignment_5/src/: main.cpp  main2.cpp  main3.cpp
student_assignment_6/: CMakeLists.txt
student_assignment_6/src/: main.cpp
student_assignmet_1/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenCV  cmake_install.cmake
student_assignmet_1/src/: main.cpp
vjezbanje/: CMakeLists.txt
vjezbanje/src/: main.cpp
vjezbe_1/: CMakeLists.txt
vjezbe_1/src/: test.cpp
vjezbe_2/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenCV  cmake_install.cmake
vjezbe_2/src/: test.cpp  test2.cpp
vjezbe_3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  vjezbe3
vjezbe_3/src/: vjezbe_3.cpp
vjezbe_4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  vjezbe4
vjezbe_4/src/: vjezbe_4.cpp
vjezbe_5/: CMakeLists.txt
vjezbe_5/src/: main.cpp  main3.cpp
vjezbe_5/zadatak_5/src/: main.cpp
vjezbe_6/src/: main.cpp
(+15 files in other folders)
