cmake_minimum_required(VERSION 3.5)
project(student_assignmet_1)
set(CMAKE_CXX_STANDARD17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONSOFF)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(run_main src/main.cpp)
target_link_libraries(run_main ${OpenCV_LIBS} )