cmake_minimum_required(VERSION 3.5)
project(vjezbe_4)
set(CMAKE_CXX_STANDARD17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONSOFF)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(vjezbe4 src/vjezbe_4.cpp)
target_link_libraries(vjezbe4 ${OpenCV_LIBS} )